# NextGIS-QGIS_private

./: .gitmodules  CMakeLists.txt  README.md
cmake_ng/: FindExpat.cmake  FindExtGSL.cmake  FindExtOpenSSL.cmake  FindExtSpatialIndex.cmake  FindExtSpatialite.cmake  FindGEOS.cmake  FindPostgreSQL.cmake  FindSpatialindex.cmake  PyQtMacros.cmake  customization.cmake  install.cmake
cmake_templates/: ngq.bat.in  qgsconfig.h.in
cmake_templates/customization/src/app/: qgisapp.cpp.in
images/: images.qrc
inst/debian/: ngqgis.desktop
ms-windows/ngq/: env-example.bat
ms-windows/ngq/ngq_default_options/QGIS/: QGIS2.ini
ms-windows/ngq/ngq_run_scripts/: qgis.bat  qgis.bat.in  qgis_preruner.bat  qgis_preruner.bat.in
ms-windows/ngq/nsis/: nextgis_qgis-base.nsh  nextgis_qgis-verison.nsh  nextgis_qgis-verison.nsh.in  nextgis_qgis.nsi  utils.nsh
ms-windows/ngq/nsis/ngq-additionals/: qgis_preruner.py
ms-windows/ngq/nsis/ngq-utils/: install_font.bat  install_fonts.bat  install_fonts.bat.in
ms-windows/ngq/scripts/: configurate.bat  ngq-build.bat  ngq_customization.py  ngqbuild.py  patching_qgis_src.py
ms-windows/ngq/scripts/qgis_patches/: change_about_dialog.patch.template  set_title.patch.template
python/: CMakeLists.txt
python/core/: qgsvectordataprovider.sip
python/ext-libs/pyspatialite/: CMakeLists.txt
python/plugins/: CMakeLists.txt
python/plugins/processing/algs/qgis/: Eliminate.py
python/pyplugin_installer/: installer_data.py
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt
src/analysis/network/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  qgisapp.cpp  qgisapp.h  qgsabout.cpp  qgsprojectproperties.cpp
src/auth/basic/: CMakeLists.txt
src/auth/identcert/: CMakeLists.txt
src/auth/pkipaths/: CMakeLists.txt
src/auth/pkipkcs12/: CMakeLists.txt
src/browser/: CMakeLists.txt
src/core/: CMakeLists.txt  qgsapplication.cpp  qgsvectordataprovider.cpp  qgsvectordataprovider.h
src/crssync/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/helpviewer/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/compass/: CMakeLists.txt
src/plugins/coordinate_capture/: CMakeLists.txt
src/plugins/dxf2shp_converter/: CMakeLists.txt
src/plugins/evis/: CMakeLists.txt
src/plugins/geometry_checker/: CMakeLists.txt
src/plugins/geometry_snapper/: CMakeLists.txt
src/plugins/georeferencer/: CMakeLists.txt
src/plugins/globe/: CMakeLists.txt
src/plugins/gps_importer/: CMakeLists.txt
src/plugins/grass/: CMakeLists.txt
src/plugins/heatmap/: CMakeLists.txt
src/plugins/interpolation/: CMakeLists.txt
src/plugins/offline_editing/: CMakeLists.txt
src/plugins/oracle_raster/: CMakeLists.txt
src/plugins/plugin_template/: CMakeLists.txt
src/plugins/raster_terrain_analysis/: CMakeLists.txt
src/plugins/roadgraph/: CMakeLists.txt
src/plugins/spatialquery/: CMakeLists.txt
src/plugins/topology/: CMakeLists.txt
src/plugins/zonal_statistics/: CMakeLists.txt
src/providers/: CMakeLists.txt
src/providers/delimitedtext/: CMakeLists.txt
src/providers/gdal/: CMakeLists.txt
src/providers/gpx/: CMakeLists.txt
src/providers/grass/: CMakeLists.txt
src/providers/memory/: CMakeLists.txt
src/providers/mssql/: CMakeLists.txt
src/providers/ogr/: CMakeLists.txt
src/providers/oracle/: CMakeLists.txt
src/providers/ows/: CMakeLists.txt
src/providers/postgres/: CMakeLists.txt
src/providers/spatialite/: CMakeLists.txt
src/providers/spatialite/qspatialite/: CMakeLists.txt
src/providers/virtual/: CMakeLists.txt
src/providers/wcs/: CMakeLists.txt
src/providers/wfs/: CMakeLists.txt  qgswfsprovider.cpp  qgswfsprovider.h
src/providers/wms/: CMakeLists.txt
src/python/: CMakeLists.txt
src/ui/: qgisapp.ui  qgsabout.ui
