IF (NOT MSVC)
  ADD_DEFINITIONS("-UPYTHON_EXPORT")
  IF ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden")
  ENDIF()
ENDIF (NOT MSVC)
ADD_DEFINITIONS("\"-DPYTHON_EXPORT=${DLLEXPORT}\"")

SET(QGISPYTHON_SRCS qgispython.cpp qgspythonutilsimpl.cpp)

INCLUDE_DIRECTORIES(
  ../core
  ../core/geometry
  ../core/raster
  ../gui
)
INCLUDE_DIRECTORIES(SYSTEM
  ${PYTHON_INCLUDE_PATH}
)

ADD_LIBRARY (${QGIS_PYTHON_TARGET_NAME} SHARED ${QGISPYTHON_SRCS})

SET_TARGET_PROPERTIES(${QGIS_PYTHON_TARGET_NAME} PROPERTIES
  CLEAN_DIRECT_OUTPUT 1)

#generate unversioned libs for android
IF (NOT ANDROID)
  SET_TARGET_PROPERTIES(${QGIS_PYTHON_TARGET_NAME} PROPERTIES
    VERSION ${NGQ_VERSION}
    SOVERSION ${NGQ_VERSION}
    )
ENDIF (NOT ANDROID)

TARGET_LINK_LIBRARIES(${QGIS_PYTHON_TARGET_NAME}
  ${QGIS_CORE_TARGET_NAME}
  ${PYTHON_LIBRARY}
  ${OPENPTY_LIBRARY}
)

IF (APPLE)
  SET_TARGET_PROPERTIES(${QGIS_PYTHON_TARGET_NAME} PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
ENDIF (APPLE)

INSTALL(TARGETS ${QGIS_PYTHON_TARGET_NAME}
  RUNTIME DESTINATION ${QGIS_BIN_DIR}
  LIBRARY DESTINATION ${QGIS_LIB_DIR})
